<resources>
    <string name="app_name">AppProject_Travlers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtCityName">City #</string>
    <string name="txtCountryName">Country #</string>
    <string name="txtCityNameDetails">City #</string>
    <string name="txtTravelPlanHint">Your travel plan notes …</string>
    <string name="txtTravelJournalHint">Your travel notes …</string>
    <string name="txtDetailsTitle">Details</string>
    <string name="txtTravelPlanTitle">Travel plan:</string>
    <string name="txtTravelJournalTitle">Travel journal:</string>
    <string name="txtRatingTitle">Your rating</string>
    <string name="checkBoxVisited">I have visited this city</string>
    <string name="btnSaveTrip">Save</string>
    <string name="txtSearchTitle">Discover Cities</string>
    <string name="btnSearch">Search</string>
    <string name="txtAddInfo">Click in list to add city to you trip library</string>
    <string name="txtNoTripsInfo">Your travel overview is empty</string>
    <string name="txtTripsTitle">Travel Overview</string>
    <string name="tbnAddCity">Add City</string>
    <string name="txtProfileTitle">My Profile</string>
    <string name="btnLogOut">Log out</string>
    <string name="txtNameInput">First Name</string>
    <string name="editLastNameInput">Last Name</string>
    <string name="edtChangePassword">New Password</string>
    <string name="edtChangePasswordConfirm">Confirm Password</string>
    <string name="btnMap"> map </string>
    <string name="txtViewMapType">Maptype</string>
    <string name="btnStattelit">Satellit</string>
    <string name="btnTerrain">Tarrain</string>
    <string name="btnHybrid" />
    <string name="txtViewHybrid">Hybrid</string>
    <string name="txtViewTarrain">Tarrain</string>
    <string name="txtTimeZoneTitle">Time zone:</string>
    <string name="txtCountryNameTitleDetails">Country:</string>
    <string name="btnNormal"> Normal2</string>
    <string name="txtViewSatellit">Satellit</string>
    <string name="txtViewNormal">Normal</string>
    <string name="txtViewTerrain">Terrain</string>
    <string name="btnSatellit2">Satellit2</string>
    <string name="btnTerrain2">Terrain3</string>
    <string name="txtWelcome">Welcome</string>
    <string name="txtSignInToCont">Sign in to continue</string>
    <string name="hintEmail">Email</string>
    <string name="txtHintPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="txtNoAccount">Don\'t have an account?</string>
    <string name="txtCreateAccount">Create account</string>
    <string name="txtCreateNewHeader">Create account</string>
    <string name="txtCreateNewSubHeader">Create a new account</string>
    <string name="edtHintName">Name</string>
    <string name="edtHintConfirmPass">Confirm Password</string>
    <string name="btnCreateNewAccount">Create account</string>
    <string name="txtChangeUserNameTitle">Change user name</string>
    <string name="txtSettingsTitle">Settings</string>
    <string name="txtUserNameTitle">Name:</string>
    <string name="txtUserName">UserName</string>
    <string name="txtChangePasswordTitle">Change Password:</string>
    <string name="txtOldPasswordTitle">Current Password</string>
    <string name="edtPasswordHint">***********</string>
    <string name="txtNewPassword">New Password</string>
    <string name="txtConfirmPasswordTitle">Confrm Password</string>
    <string name="btnLogOut">Log out</string>
</resources>