<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">


    <TextView
        android:id="@+id/txtAddInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txtAddInfo"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="@+id/edtSearchField"
        app:layout_constraintTop_toBottomOf="@+id/edtSearchField" />

    <TextView
        android:id="@+id/txtSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtSearchTitle"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtSearchField"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/text_view_shape"
        android:hint="@string/btnSearch"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSearch"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSearch" />


    <Button
        android:id="@+id/btnSearch"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSearchTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvCities"
        android:layout_width="0dp"
        android:layout_height="254dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_view_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtAddInfo"
        app:layout_constraintTop_toBottomOf="@+id/txtAddInfo"
        tools:itemCount="3"
        tools:listitem="@layout/list_item_city" />
</androidx.constraintlayout.widget.ConstraintLayout>